# nluaxx

./: CMakeLists.txt  README.md  core.cpp  core.h  fs.cpp  fs.h  liblua.h  nlua++.cpp  nlua++.h  string.cpp  string.h  stringt.cpp  test.cpp  test.lua  timer.cpp  timer.h  value.cpp  value.h  variant.cpp  variant.h
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/nnt/nlua/: MainActivity.kt
android/app/src/main/java/com/nnt/nlua_test/: MainActivity.kt
android/app/src/main/res/raw/: test0.lua
android/app/src/main/res/values/: strings.xml
android/nlua++/src/: CMakeLists.txt
android/nlua++/src/main/: AndroidManifest.xml
android/nlua++/src/main/java/com/nnt/nlua/: Context.kt  Variant.kt
include/nlua++/: nlua++.hpp  private.hpp  value.hpp
mac/: test.mm
mac/cross-ios/cross-ios/: cross_ios.h
mac/cross-ios/cross-ios.xcodeproj/: project.pbxproj
mac/cross-macos/cross-macos/: cross_macos.h
mac/cross-macos/cross-macos.xcodeproj/: project.pbxproj
mac/nlua/: nlua.h
mac/nlua++.xcworkspace/: contents.xcworkspacedata
mac/nlua-ios.xcodeproj/: project.pbxproj
mac/nlua-ios/nlua-ios/: nlua_ios.h
mac/nlua-ios/nlua-ios.xcodeproj/: project.pbxproj
mac/nlua-macos.xcodeproj/: project.pbxproj
mac/nlua-macos/nlua-macos/: nlua_macos.h
mac/nlua-macos/nlua-macos.xcodeproj/: project.pbxproj
mac/nlua.xcworkspace/: contents.xcworkspacedata
mac/test-ios/: AppDelegate.swift  ContentView.swift  SceneDelegate.swift
mac/test-ios.xcodeproj/: project.pbxproj
mac/test-ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mac/test-ios/Base.lproj/: LaunchScreen.storyboard
mac/test-ios/test-ios/: AppDelegate.swift  ContentView.swift  SceneDelegate.swift
mac/test-ios/test-ios.xcodeproj/: project.pbxproj
mac/test-macos/: main.swift
mac/test-macos.xcodeproj/: project.pbxproj
mac/test-macos.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mac/test-macos/test-macos/: main.swift
mac/test-macos/test-macos.xcodeproj/: project.pbxproj
msvc/libnlua++/: libnlua++.vcxproj  libnlua++.vcxproj.filters
msvc/test/: stdafx.cpp  test.vcxproj  test.vcxproj.filters
nlua++/: CMakeLists.txt  android-prv.cpp  android-prv.hpp  android_link.cpp  ast.cpp  ast.hpp  liblua.hpp  nlua++.cpp  nlua++.sln  private.cpp  private.hpp  value.cpp  variant.cpp  variant.hpp
nlua++/ajni++/: CMakeLists.txt  ast.cpp  java-prv.cpp  jnienv.cpp  jre.cpp  variant.cpp  variant.hpp
nlua++/cross/: CMakeLists.txt  macro.hpp
nlua++/libnlua++/: libnlua++.cpp  libnlua++.vcxproj  libnlua++.vcxproj.filters  stdafx.cpp  stdafx.h
nlua++/lua/5.3/: CMakeLists.txt  loslib.c
nlua++/test/: stdafx.cpp  stdafx.h  test.cpp  test.vcxproj  test.vcxproj.filters
src/: CMakeLists.txt  android_link.cpp  ast.cpp  ast.hpp  com++.h  core.cpp  core.h  core.hpp  fs.cpp  fs.h  fs.hpp  liblua.h  liblua.hpp  macro.h  nlua++.cpp  nlua++.h  nlua++.hpp  private.cpp  private.hpp  str.cpp  str.h  stringt.cpp  stringt.h  timer.cpp  value.cpp  value.h  value.hpp  variant.cpp  variant.h  variant.hpp
src/ajni++/: CMakeLists.txt  jnienv.cpp  jnienv.hpp  jre.hpp  variant.hpp
src/cross/: CMakeLists.txt
src/lua/: CMakeLists.txt  lua.c
test/: main.lua  test.cpp  test.lua  test0.lua  test1.lua  test5.lua  test6.lua  test7.lua  test8.lua  test999.lua  timer.cpp  timer.h  timer.hpp
test.bundle/: test0.lua  test6.lua
